- upgraded to latest molindo-utils snapshot - use URIUtils.resolve(..) instead of RequestUtils.toAbsolutePath(..) for URL generation Conflicts: 	src/main/java/at/molindo/wicketutils/utils/WicketUtils.java